# slats_set

./: .gitignore  CMakeLists.txt
src/: main.cpp  slat.h  slat_set.cpp  slat_set.h
